@@ -256,6 +256,7 @@ Release 0.21.0 - Unreleased
    HBASE-2358  Store doReconstructionLog will fail if oldlogfile.log is empty
                and won't load region (Cosmin Lehene via Stack)
    HBASE-2370  saveVersion.sh doesnt properly grab the git revision
+   HBASE-2361  WALEdit broke replication scope
 
   IMPROVEMENTS
    HBASE-1760  Cleanup TODOs in HTable
